# triad

./: .gitignore  ARCHIVES.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MANIFEST.md  README.md  RESEARCH-AGENDA.md  STRUCTURE.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
_docs_assets/: compare.js  equation-interactive.js  extra.css  mathjax.js  path-enhance.js  plotly-loader.js  predictions-board.js  wheel-interactive.js
archives/: README.md  llm-hedge-annotations.md
docs/: LICENSE-docs  RESEARCH-AGENDA.md  STRUCTURE.md  _docs_assets  equation  glossary.md  index.es.md  index.md  index.pt.md  llm-hedge-annotations.md  methodology  open-problems  paths  principles  session-log-2026-05-16-overnight.md  session-log-2026-05-17-corrections.md
equation/: 01-derivation.md  02-markovian-embedding.md  03-two-dimensional.md  04-three-dimensional.md  05-reductions.md  README.md
experiments/: PROTOCOLS.md  README.md
hooks/: _apply_frontmatter.py  build_index.py
implementation/: README.md
interfaces/: 01-other-nls-systems.md  02-baryon-acoustic.md  03-chladni-cymatics.md  04-gamma-entrainment.md  05-archaeoacoustic-resonance.md  06-state-space-models.md  07-cosmological-expansion.md  08-mechanistic-interpretability.md  09-critical-brain.md  10-kuramoto-synchronization.md  11-immune-affinity-maturation.md  12-friston-free-energy.md  13-active-matter.md  14-self-organized-criticality.md  15-cardiac-dynamics.md  16-gene-regulation-circadian.md  17-ecosystem-dynamics.md  18-pseudomode-quantum.md  19-viscoelasticity-prony.md  20-warm-inflation.md  21-hawkes-intensity.md  22-earthquake-cycle.md  README.md  compare.md  predictions.md
methodology/: 01-structural-realism.md  04-the-six-criteria.md  (+8 more)
(+228 files in other folders)
