[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnsm"
version = "0.1.0"
description = "Memory-Nonlinear State Models: a memory-augmented nonlinear Schrödinger field equation with state space model correspondence."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "qrv0" }
]
keywords = [
    "nonlinear-schrodinger",
    "state-space-models",
    "structural-realism",
    "sequence-modeling",
    "memory-augmented-dynamics",
    "cross-domain",
    "anti-collapse",
    "bravais-selection",
    "fluctuation-dissipation",
    "cosmological-expansion",
    "philosophy-of-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "h5py>=3.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0"]
notebooks = ["jupyterlab>=4.0", "ipykernel>=6.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://github.com/qrv0/mnsm"
Paper = "https://github.com/qrv0/mnsm/blob/main/paper/manuscript.md"
Documentation = "https://github.com/qrv0/mnsm/blob/main/README.md"
Issues = "https://github.com/qrv0/mnsm/issues"

[tool.setuptools.packages.find]
where = ["implementation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
